<resources>
    <string name="app_name">Final Project</string>
    <string name="CovidNavButton">Covid-19</string>
    <string name="AudioNavButton">Audio Database</string>
    <string name="RecipeNavButton">Recipe</string>
    <string name="TicketMasterNavButton">TicketMaster</string>
    <string name="city_search">City:</string>
    <string-array name="navItems">
        <item>Home</item>
        <item>Covid-19</item>
        <item>Audio Database</item>
        <item>Recipe</item>
        <item>TicketMaster</item>
    </string-array>
    <string name="searchText">Search..</string>
    <string name="searchText1">Searching..</string>
    <string name="country">Country:</string>
    <string name="conCode">Country Code:</string>
    <string name="province">Province:</string>
    <string name="cases">Cases:</string>
    <string name="status">Status:</string>
    <string name="SearchButtonText">Search</string>
    <string name="searchRecipesEdit">Search Recipes…</string>
    <string name="recipeIconDesc">Icon of a recipe</string>
    <string name="favouriteButton">Favourite</string>
    <string name="recipeRowText">Recipe Name</string>
    <string name="radius_search">Radius</string>
    <string name="HomeNavButton">Hone</string>
    <string name="event_name">Event Name</string>
    <string name="eventIcon">Event Icon</string>
    <string name="city">City</string>
    <string name="startDate">Start Date</string>
    <string name="minPrice">Minimum Price</string>
    <string name="maxPrice">Maximum Price</string>
    <string name="url"><a href="@string/urlLink">OPEN EVENT IN BROWSER</a></string>
    <string name="urlTitle">Event URL</string>
    <string name="back">BACK</string>

</resources>