<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <include layout="@layout/activity_navigation"
            android:id="@+id/header"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/header"
            android:layout_toLeftOf="@+id/searchButton"
            android:layout_alignParentStart="true"
            android:text="@string/city_search"
            android:id="@+id/citySearch"
            android:textSize="30sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/citySearch"
            android:layout_toLeftOf="@+id/searchButton"
            android:layout_alignParentStart="true"
            android:text="@string/radius_search"
            android:id="@+id/radius"
            android:textSize="30sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/header"
            android:text="@string/SearchButtonText"
            android:layout_alignParentEnd="true"
            />
        <ListView
            android:id="@+id/theListView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_above="@+id/loadBar"
            android:layout_below="@+id/searchButton"
            />

        <ProgressBar
            android:id="@+id/loadBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>